[CREATE] creating navbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,9 +2,9 @@
 
 $light: #eef9ff;
 $dark: #0c0c04;
-$primary: #eb5caf;
+$primary: #696969;
 $secondary: #a10861;
-$info: #fa8dcd;
+$info: #FFDAB9;
 $success: #04c066;
 $warning: #efd103;
 $danger: #ff1521;
