--- a/src/index.scss
+++ b/src/index.scss
@@ -43,8 +43,20 @@ body {
   
 }
 .wave-img {
-  opacity: 50%;
+  opacity: 100%;
 }
+
+#category-select {
+  width: 100px; /* Set the desired width */
+  height: 40px; /* Set the desired height */
+  font-size: 16px; /* Adjust font size if needed */
+
+  option {
+    padding: 10px; /* Adjust padding for options */
+    font-size: 16px; /* Adjust font size for options */
+  }
+}
+
 
 
 
